--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "prettier": "^2.7.1",
     "sass": "^1.58.3",
     "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.24.0",
     "vite": "^4.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.12"
   }
 }
